<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrlView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
    android:id="@+id/tareaTitulo"
    android:lines="2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tareaResponsable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tareaPrioridad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tareaMinutosAsignados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tareaMinutosTrabajados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <CheckBox
            android:id="@+id/tareaFinalizada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="240dp"
        android:layout_height="wrap_content">
        <ToggleButton
            android:id="@+id/tareaBtnTrabajando"
            android:textOn="@string/trabajando"
            android:textOff="@string/trabajar"
            android:layout_width="120dp"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/tareaBtnFinalizada"
            android:text="@string/finalizar"
            android:layout_width="120dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="240dp"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/tareaBtnEditarDatos"
            android:text="@string/editar"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            />
        <Button
            android:text="@string/borrar"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/tareaBtnBorrarDatos"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>
</ScrollView>